infra/k8s/config/deployment.yaml
# Kubernetes deployment for the graphql-react-prototype server.
# Author: Andrew Jarombek
# Date: 6/28/2020

apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-react-prototype
  namespace: sandbox
  labels:
    version: v1.0.0
    environment: sandbox
    application: graphql-react-prototype
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      application: graphql-react-prototype
      environment: production
  template:
    metadata:
      labels:
        version: v1.0.0
        environment: sandbox
        application: graphql-react-prototype
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - development-tests
      containers:
        - name: graphql-react-prototype
          image: ${ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/graphql-react-prototype-app:1.0.0
          readinessProbe:
            periodSeconds: 5
            initialDelaySeconds: 20
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            periodSeconds: 5
            initialDelaySeconds: 20
            failureThreshold: 4
            httpGet:
              path: /
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
