infra/k8s/config/service.yaml
# Kubernetes NodePort service for the graphql-react-prototype application.
# Author: Andrew Jarombek
# Date: 6/28/2020

apiVersion: v1
kind: Service
metadata:
  name: graphql-react-prototype-service
  namespace: sandbox
  labels:
    version: v1.0.0
    environment: sandbox
    application: graphql-react-prototype
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    application: graphql-react-prototype
